// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane R1 — the phone is unchanged (golden) contacts add sheet (header Plus), iOS 390 1`] = `
{
  "lines": 498,
  "sha256": "65dbe5b94c290975c1b176098fc76964d87481c02d427debf7998ec68d224302",
}
`;

exports[`lane R1 — the phone is unchanged (golden) contacts at rest, iOS 390 1`] = `
{
  "lines": 498,
  "sha256": "47b4d9463b5db95df359e49236d74ca9b47d789324420170715a938a34df7caa",
}
`;

exports[`lane R1 — the phone is unchanged (golden) contacts at rest, web 390 1`] = `
{
  "lines": 498,
  "sha256": "47b4d9463b5db95df359e49236d74ca9b47d789324420170715a938a34df7caa",
}
`;

exports[`lane R1 — the phone is unchanged (golden) contacts at rest, web 768 1`] = `
{
  "lines": 498,
  "sha256": "47b4d9463b5db95df359e49236d74ca9b47d789324420170715a938a34df7caa",
}
`;

exports[`lane R1 — the phone is unchanged (golden) contacts detail open, iOS 390 1`] = `
{
  "lines": 593,
  "sha256": "b0f71e13b735ba3b7c604441ae20e7ceff6123e1a602ef4f97a71acfa98b0bbb",
}
`;

exports[`lane R1 — the phone is unchanged (golden) crew add sheet (add-crew-member), iOS 390 1`] = `
{
  "lines": 419,
  "sha256": "7b9b56788eb55d9ac2ec724659ef04a505f3678f01105ecd1e233e8745e17703",
}
`;

exports[`lane R1 — the phone is unchanged (golden) crew at rest, iOS 390 1`] = `
{
  "lines": 419,
  "sha256": "b8f663d72c77da86afc1d0dd91bdfcdbda9660d58494faafcf0f3011650b3fc8",
}
`;

exports[`lane R1 — the phone is unchanged (golden) crew at rest, web 390 1`] = `
{
  "lines": 419,
  "sha256": "b8f663d72c77da86afc1d0dd91bdfcdbda9660d58494faafcf0f3011650b3fc8",
}
`;

exports[`lane R1 — the phone is unchanged (golden) crew at rest, web 768 1`] = `
{
  "lines": 419,
  "sha256": "b8f663d72c77da86afc1d0dd91bdfcdbda9660d58494faafcf0f3011650b3fc8",
}
`;

exports[`lane R1 — the phone is unchanged (golden) crew detail open, iOS 390 1`] = `
{
  "lines": 518,
  "sha256": "856b0d2e669f89549caed7b565914e3411153921d05227fc13a8c3bd0dfdb1cd",
}
`;
